--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .vs/
 
 src/Domain/obj/
@@ -39,3 +38,11 @@ results/
 *.dtmp
 
 *.user
+
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+EventService/Presentation.WebAPI/obj/project.nuget.cache
+
+EventService/Presentation.WebAPI/obj/project.assets.json
