--- a/src/Presentation.WebAPI/appsettings.Development.json
+++ b/src/Presentation.WebAPI/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DatabaseConnectionString": "server=localhost;port=3306;database=event_service_dev;user=root;password=root;"
 }
