--- a/src/Presentation.WebAPI/Presentation.WebAPI.csproj
+++ b/src/Presentation.WebAPI/Presentation.WebAPI.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageReference Include="Azure.Core" Version="1.39.0" />
 		<PackageReference Include="FluentValidation" Version="11.5.1" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
