--- a/src/Presentation.WebAPI/appsettings.Development.json
+++ b/src/Presentation.WebAPI/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
-	},
-	"DatabaseConnectionString": "server=localhost;port=3306;user=root;password=root;database=eventservice;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "DatabaseConnectionString": "server=localhost;port=3306;database=event_service_dev;user=root;password=root;"
 }
