--- a/src/Presentation.WebAPI/Presentation.WebAPI.csproj
+++ b/src/Presentation.WebAPI/Presentation.WebAPI.csproj
@@ -10,6 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Validation\Event\GetAllEventsDtoValidator.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Abp" Version="9.2.2" />
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
