KROWN-91 : Update "AddDetailsFeature" with images, update domain, etc
I updated the domain, builders, migrations. I create the client to make connection with cloudflare

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -6,6 +6,7 @@
 		<Nullable>disable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="AWSSDK.S3" Version="3.7.310.1" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
 		<PackageReference Include="MediatR" Version="12.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
