--- a/src/Presentation.WebAPI/Presentation.WebAPI.csproj
+++ b/src/Presentation.WebAPI/Presentation.WebAPI.csproj
@@ -10,13 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="Validation\Event\GetAllEventsDtoValidator.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Abp" Version="9.2.2" />
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageReference Include="AWSSDK.S3" Version="3.7.310.1" />
 		<PackageReference Include="Azure.Core" Version="1.39.0" />
 		<PackageReference Include="FluentValidation" Version="11.5.1" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
